/*
  Copyright (c) 2025

  Description:
    Internal interaction contract

  Owner: 
    dev team
    
  Methods:
*/

syntax = "proto3";
package api.tips.invoice.v1;
option csharp_namespace = "ApiTips.Api.Invoice.V1";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import 'custom_enums/v1/custom_enums.proto';
import 'custom_types/v1/decimal.proto';
import 'general_entities/v1/general_entities.proto';

service ApiTipsInvoiceService {

  /*
   * Получение всех счетов
   */
  rpc GetInvoices (GetInvoicesRequest) returns (GetInvoicesResponse);
  /*
   * Создание нового счета
   */
  rpc CreateInvoice (CreateInvoiceRequest) returns (CreateInvoiceResponse);
  /*
   * Изменение счета
   */
  rpc UpdateInvoice (UpdateInvoiceRequest) returns (UpdateInvoiceResponse);

  /*
   * Изменение счета
   */
  rpc GeneratePdfForInvoice (GeneratePdfForInvoiceRequest) returns (GeneratePdfForInvoiceResponse);

}

message GetInvoicesRequest {

}

message GetInvoicesResponse {

  /*
   * Список счетов, которые есть в системе
   */
  repeated Invoice invoices = 1;
  /*
   * Мета информация ответа
   */
  api.tips.general_entities.v1.GeneralResponse response = 10;

}

/*
 * Запрос на создание нового счёта
 */
message CreateInvoiceRequest {

  /*
   * Тип оплаты
   */
  custom_enums.v1.PaymentType payment_type = 1;

  /*
   * Сумма для оплаты
   */
  custom_types.v1.Decimal total_amount = 2;

  /*
   * Общее количество запросов для счёта
   */
  google.protobuf.Int64Value amount_of_requests = 3;

  /*
   * Описание к счету
   */
  google.protobuf.StringValue description = 4;

  /*
   * Идентификатор заказа
   */
  int64  orderId = 5;

}

/*
 * Ответ на создание счета
 */
message CreateInvoiceResponse {
  /*
   * Созданный счет
   */
  Invoice invoice = 1;

  /*
   * Мета информация ответа
   */
  api.tips.general_entities.v1.GeneralResponse response = 10;

}

/*
 *  Запрос на обновление счета
 */
message UpdateInvoiceRequest {

  /*
   * Идентификатор (Guid) счёта для обновления
   */
  string invoice_id = 1;

  /*
   * REF-номер
   */
  optional string ref_number = 2;

  /*
   * Общее количество запросов
   */
  google.protobuf.Int64Value amount_of_requests = 3;

  /*
   * Новый статус счета
   */
  optional custom_enums.v1.InvoiceStatus invoice_status = 4;

}

/*
 * Ответ на обновление счета
 */
message UpdateInvoiceResponse {

  /*
   * Счет после обновления
   */
  Invoice invoice = 1;

  /*
   * Мета информация ответа
   */
  api.tips.general_entities.v1.GeneralResponse response = 10;
}

/*
 * Запрос на генерацию PDF-файла счета
 */
message GeneratePdfForInvoiceRequest {

  /*
   * Идентификатор (guid) счета
   */
  string invoice_id = 1;
}

message GeneratePdfForInvoiceResponse {

  /*
   * Счёт в формате base64
   */
  bytes invoice_pdf = 1;

  /*
   * Мета информация ответа
   */
  api.tips.general_entities.v1.GeneralResponse response = 10;
}

/*
 * Общие сущности для сервиса работы со счетами
 */
message Invoice {

  /*
   * Идентификатор счета
   */
  optional string guid = 1;

  /*
   * Плательщик (тот, кому выставляется счет)
   */
  User invoice_owner = 2;

  /*
   * Статус счёта
   *  - полностью зависит от заказа, на который он создаётся (берётся такой же статус)
   */
  custom_enums.v1.InvoiceStatus status = 3;

  /*
   * REF-номер счета
   */
  optional string ref_number = 4;

  /*
   * Общая сумма для оплаты
   */
  custom_types.v1.Decimal total_amount = 5;

  /*
   * Тип платежа
   */
  custom_enums.v1.PaymentType payment_type = 6;

  /*
   * Количество запросов в счете
   */
  google.protobuf.Int64Value amount_of_requests = 7;

  /*
   * Дата создания счета
   */
  google.protobuf.Timestamp created_date = 8;

  /*
   * Дата оплаты счета
   */
  google.protobuf.Timestamp payment_date = 9;

  /*
   * Описание для счета
   */
  google.protobuf.StringValue description = 10;

  /*
   * Тип валюты
   */
  google.protobuf.StringValue currency = 11;
}

message User {
  /*
   * Идентификатор пользователя
   */
  int64 id = 1;

  /*
   * Почта пользователя
   */
  string email = 2;

  /*
   * Имя пользователя
   */
  string first_name = 3;

  /*
   * Фамилия пользователя
   */
  string last_name = 4;
}